--- a/index.html
+++ b/index.html
@@ -1,16 +1,324 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu curriculum</title>
+
+    <!-- IMPORT CSS LOCAL -->
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- INPORT CSS BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
 <body>
 
-    <main>
-        
-    </main>
-    
+    <!-- CONTAINER -->
+    <div class="container">
+
+        <div class="row row-cols-4">
+
+            <!-- IMAGEM + NOME -->
+            <div class="col col-12 col-sm-12 col-md-12">
+
+                <!-- BOX PRINCIPAL IMAGEM + NOME -->
+                <div>
+
+                    <!-- IMAGEM -->
+                    <div>
+                        <img src="img/jpg/foto_pequena_jean.jpg" alt="" srcset="">
+                    </div>
+
+                    <!-- NOME -->
+                    <div>
+                        <h1>JEAN CLEIDSON PEREIRA RODRIGUES</h1>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- DADOS PESSOAIS + DESCRIÇÃO -->
+            <div class="col col-12">
+
+                <div class="row">
+
+                    <!-- ESQUERDO X1 -->
+                    <div class="col col-12 col-sm-12 col-md-4">
+
+                        <!-- LISTA #1 -->
+                        <ul>
+
+                            <!--ITEM #1 [NOME] -->
+                            <li>
+                                <label>Nome</label>
+                            <li>
+                                <span>JEAN RODRIGUES</span>
+                            </li>
+                            </li>
+
+                            <!--ITEM #2 [ENDEREÇO] -->
+                            <li>
+                                <label>Endereço</label>
+                            <li>
+                                <span>RUA DA REPÚBLICA QD 9, 74450390 GOIÃNIA</span>
+                            </li>
+                            </li>
+
+                            <!--ITEM #3 [TELEFONE] -->
+                            <li>
+                                <label>Telefone</label>
+                            <li>
+                                <a href="tel:+5564984032553">☎️ (64) 98403-2553</a>
+                            </li>
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <!-- DIREITO X1 -->
+                    <div class="col col-12 col-sm-12 col-md-8">
+
+                        <!-- LISTA #2 -->
+                        <ul>
+
+                            <!--ITEM #1 [SOBRE MIM] -->
+                            <li>
+
+                                <label>SOBRE MIM</label>
+                                <!-- SUB-ITEM #1 -->
+                            <li>
+
+                                <!-- SUB-ITEM #2 -->
+                            <li>
+                                <div>
+                                    <label>NÍVEL PROFISSIONAL</label>
+                                </div>
+                                <div>
+                                    <span>🌟🌟🌟🌟/5</span>
+                                </div>
+                            </li>
+                            <!-- SUB-ITEM #3 -->
+                            <li>
+                                <div>
+                                    <span>OLÁ MUNDO!!!</span>
+                                </div>
+                            </li>
+                            <!-- SUB-ITEM #4 -->
+                            <li>
+                                <span>
+                                    Possuo habilidades comprovadas para trabalhar em equipe e desenvolver
+                                    relacionamentos
+                                    interpessoais saudáveis. Sou apto a atender e interagir com clientes,
+                                    fornecedores e
+                                    outros parceiros de forma eficiente. Estou comprometido com prazos e entregas de
+                                    qualidade, buscando a oportunidade para o cargo que me permita desenvolver
+                                    minhas
+                                    competências profissionais.
+                                </span>
+                            </li>
+
+                            </li>
+
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <!-- ESQUERDO X2 -->
+                    <div class="col col-12 col-sm-12 col-md-4">
+
+                        <!-- LISTA #3 -->
+                        <ul>
+
+                            <!--ITEM #1 [E-MAIL] -->
+                            <li>
+                                <label>E-mail</label>
+                            <li>
+                                <a href="mailto:jeantng2016@gmail.com">📧 jeantng2016@gmail.com</a>
+                            </li>
+                            </li>
+
+                            <!--ITEM #1 [DATA DE NASCIMENTO] -->
+                            <li>
+                                <label>Data de nascimento</label>
+                            <li>
+                                <span>06/12/1998</span>
+                            </li>
+                            </li>
+
+                            <!--ITEM #1 [LOCAL DE NASCIMENTO] -->
+                            <li>
+                                <label>Local de nascimento</label>
+                            <li>
+                                <span>Goiânia</span>
+                            </li>
+                            </li>
+
+                            <!--ITEM #1 [SEXO] -->
+                            <li>
+                                <label>Sexo</label>
+                            <li>
+                                <span>Masculino</span>
+                            </li>
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <!-- DIREITO X2 -->
+                    <div class="col col-12 col-sm-12 col-md-8">
+
+                        <!-- LISTA #4 -->
+                        <ul>
+
+                            <!--ITEM #1 [EXPERIENCIA PROFISSIONAL] -->
+                            <li>
+
+                                <label>EXPERIÊNCIA PROFISSIONAL</label>
+                                <!-- SUB-ITEM #1 -->
+                            <li>
+
+                                <!-- SUB-ITEM #2 -->
+                            <li>
+                                <div>
+                                    <label>GERENTE DE T.I</label>
+                                </div>
+                                <div>
+                                    <span>2017 - Presente</span>
+                                </div>
+                            </li>
+                            <!-- SUB-ITEM #3 -->
+                            <li>
+                                <div>
+                                    <span>GRUPO AGECOB, GOIÃNIA</span>
+                                </div>
+                            </li>
+                            <!-- SUB-ITEM #4 -->
+                            <li>
+                                <span>
+                                    Com muito orgulho e emoção, deixo a empresa na qual atualmente me encontro presente.
+                                    Busco partir desta jornada com o intuito de não prejudicar a empresa, mantendo sua
+                                    eficiência e autonomia. Estou grato por todas as oportunidades que me foram dadas e
+                                    desejo todo o sucesso para os próximos projetos.
+                                </span>
+                            </li>
+
+                            </li>
+
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <!-- ESQUERDO X3 -->
+                    <div class="col col-12 col-sm-12 col-md-4">
+
+                        <!-- LISTA #5 -->
+                        <ul>
+
+                            <!--ITEM #1 [NACIONALIDADE] -->
+                            <li>
+                                <label>Nacionalidade</label>
+                            <li>
+                                <span>BRASILEIRA</span>
+                            </li>
+                            </li>
+
+                            <!--ITEM #1 [ESTADO CIVIL] -->
+                            <li>
+                                <label>Estado civil</label>
+                            <li>
+                                <span>SOLTEIRO</span>
+                            </li>
+                            </li>
+
+                            <!--ITEM #1 [WEBSITE] -->
+                            <li>
+                                <label>Website</label>
+                            <li>
+                                <a href="https://jeancprodrigues.github.io/OkeGoogle/">🌐 Meu site</a>
+                            </li>
+                            </li>
+
+                            <!--ITEM #1 [LINKEDIN] -->
+                            <li>
+                                <label>LinkedIn</label>
+                            <li>
+                                <a href="https://www.linkedin.com/in/jean-rodrigues-155662206">🔗 Meu LinkedIn</a>
+                            </li>
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <!-- DIREITO X3 -->
+                    <div class="col col-12 col-sm-12 col-md-8">
+
+                        <!-- LISTA #6 -->
+                        <ul>
+
+                            <!--ITEM #1 [FORMAÇÃO E QUAL IF ICAÇÕES] -->
+                            <li>
+
+                                <label>FORMAÇÃO E QUALIFICAÇÕES</label>
+                                <!-- SUB-ITEM #1 -->
+                            <li>
+
+                                <!-- SUB-ITEM #2 -->
+                            <li>
+                                <div>
+                                    <label>CURSANDO SUPERIOR</label>
+                                </div>
+                                <div>
+                                    <span>Presente</span>
+                                </div>
+                            </li>
+                            <!-- SUB-ITEM #3 -->
+                            <li>
+                                <div>
+                                    <span>ESTÁCIO, GOIÃNIA</span>
+                                </div>
+                            </li>
+                            <!-- SUB-ITEM #4 -->
+                            <li>
+                                <span>
+                                    Atualmente curso Ciências da Computação, e posso dizer com toda a humildade que é um
+                                    curso incrível, com uma estrutura perfeita. Embora seja apenas o meu primeiro
+                                    período, acredito que a facilidade que sinto se deve à minha experiência na área.
+                                    Estou muito animado para ver o que mais virá pela frente!
+                                </span>
+                            </li>
+
+                            </li>
+
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <!-- IMPORT JAVASCRIPT BOOTSTRAP -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
