--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                         </div>
                                     </li>
                                     <!-- SUB-ITEM #4 [LISTA] -->
-                                    <li>
+                                    <ol>
 
                                         <!-- ITEM ORDERNADO #1 [JAVASCRIPT] -->
                                         <ol>
@@ -412,7 +412,7 @@
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -476,8 +476,8 @@
                                             <div>
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -490,7 +490,7 @@
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -502,8 +502,8 @@
                                             <div>
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -529,7 +529,7 @@
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -540,9 +540,9 @@
                                             </div>
                                             <div>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -567,8 +567,8 @@
                                             <div>
                                                 <i class="bi bi-star-fill"></i>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -579,9 +579,9 @@
                                             </div>
                                             <div>
                                                 <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
-                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
                                             </div>
                                         </ol>
@@ -625,7 +625,7 @@
                                             </div>
                                         </ol>
                                         
-                                    </li>
+                                    </ol>
 
                                 </li>
 
