--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
                     </div>
 
-                    <!-- DIREITO X3 -->
+                    <!-- DIREITO X4 -->
                     <div class="col col-12 col-sm-12 col-md-8">
 
                         <!-- LISTA #8 -->
@@ -386,9 +386,14 @@
                                         <div>
                                             <span>Lista:</span>
                                         </div>
+                                        <div>
+                                            <div>
+                                                <input id="inputFinderAptidao" type="text" class="form-control" placeholder="Digite algo...">
+                                            </div>
+                                        </div>
                                     </li>
                                     <!-- SUB-ITEM #4 [LISTA] -->
-                                    <ol>
+                                    <ul id="ulListAptidao">
 
                                         <!-- ITEM ORDERNADO #1 [JAVASCRIPT] -->
                                         <ol>
@@ -625,7 +630,7 @@
                                             </div>
                                         </ol>
                                         
-                                    </ol>
+                                    </ul>
 
                                 </li>
 
@@ -642,6 +647,10 @@
         </div>
 
     </div>
+
+    <!-- IMPORT JAVASCRIPT NATIVO [ACTION MAIN] -->
+    <script src="javascript/main.js"></script>
+    
     <!-- IMPORT JAVASCRIPT BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
