--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu curriculum</title>
 
+    <link rel="shortcut icon" href="img/ico/curriculum-vitae.ico" type="image/x-icon">
     <!-- IMPORT CSS LOCAL -->
     <link rel="stylesheet" href="css/main.css">
 
@@ -17,6 +18,7 @@
 
 <body>
 
+    <div class="divDownPage"></div>
     <!-- CONTAINER -->
     <div class="container">
 
@@ -650,7 +652,7 @@
 
     <!-- IMPORT JAVASCRIPT NATIVO [ACTION MAIN] -->
     <script src="javascript/main.js"></script>
-    
+
     <!-- IMPORT JAVASCRIPT BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
