Update JavaScript ListFindAptidao

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #3 [NODE.JS] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>NODE.JS</label>
                                             </div>
@@ -437,7 +437,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #3 [ELECTRON.JS] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>ELECTRON.JS</label>
                                             </div>
@@ -450,7 +450,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #4 [SQL] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>SQL</label>
                                             </div>
@@ -463,7 +463,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #5 [MYSQL] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>MYSQL</label>
                                             </div>
@@ -476,7 +476,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #6 [NoSQL] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>NoSQL</label>
                                             </div>
@@ -489,7 +489,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #7 [C++] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>C++</label>
                                             </div>
@@ -502,7 +502,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #8 [C] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>C</label>
                                             </div>
@@ -515,7 +515,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #9 [WINDOWS] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>WINDOWS</label>
                                             </div>
@@ -528,7 +528,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #10 [LINUX] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>LINUX</label>
                                             </div>
@@ -541,7 +541,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #11 [MAC OS] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>MAC OS</label>
                                             </div>
@@ -554,7 +554,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #12 [EXCEL] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>EXCEL</label>
                                             </div>
@@ -567,7 +567,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #13 [EXCEL VBA] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>EXCEL VBA</label>
                                             </div>
@@ -580,7 +580,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #14 [POWER BI] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>POWER BI</label>
                                             </div>
@@ -593,7 +593,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #15 [PYTHON] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>PYTHON</label>
                                             </div>
@@ -606,7 +606,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #16 [API REST] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>API REST</label>
                                             </div>
@@ -619,7 +619,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #16 [CHAT GPT-3] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>CHAT GPT-3</label>
                                             </div>
