Update JavaScript FinderListAptidao

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                     <!-- SUB-ITEM #3 -->
                                     <li>
                                         <div>
-                                            <span>Lista:</span>
+                                            <span class="totalItemFindAptidaoView">Lista:</span>
                                         </div>
                                         <div>
                                             <div>
