Update JavaScript Calc Star

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                                             <label>CALCULO DE APTIDÃO</label>
                                         </div>
                                         <div>
-                                            <span>93,33% de 100%</span>
+                                            <span class="totalItemStarAptidaoView">93,33% de 100%</span>
                                         </div>
                                     </li>
                                     <!-- SUB-ITEM #3 -->
