Add Aptidao HTML + CSS

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                                     <ul id="ulListAptidao">
 
                                         <!-- ITEM ORDERNADO #1 [JAVASCRIPT] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>JAVASCRIPT</label>
                                             </div>
@@ -411,7 +411,7 @@
                                             </div>
                                         </ol>
                                         <!-- ITEM ORDERNADO #2 [PHP] -->
-                                        <ol>
+                                        <ol style="display: none;">
                                             <div>
                                                 <label>PHP</label>
                                             </div>
@@ -622,6 +622,32 @@
                                         <ol style="display: none;">
                                             <div>
                                                 <label>CHAT GPT-3</label>
+                                            </div>
+                                            <div>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                                <i class="bi bi-star"></i>
+                                            </div>
+                                        </ol>
+                                        <!-- ITEM ORDERNADO #16 [HTML] -->
+                                        <ol style="display: none;">
+                                            <div>
+                                                <label>HTML</label>
+                                            </div>
+                                            <div>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star-fill"></i>
+                                                <i class="bi bi-star"></i>
+                                            </div>
+                                        </ol>
+                                        <!-- ITEM ORDERNADO #16 [CSS] -->
+                                        <ol style="display: none;">
+                                            <div>
+                                                <label>CSS</label>
                                             </div>
                                             <div>
                                                 <i class="bi bi-star-fill"></i>
